# philo

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.codex/environments/: environment.toml
.github/workflows/: content_engine.yml  frontend_ci.yml  release.yml
apps/: README.md
apps/desktop/: package.json
apps/desktop/scripts/: tauri.mjs
apps/desktop/src/: App.css  main.tsx
apps/desktop/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  macos_location.rs  philo_tools.rs  widget_git.rs
apps/desktop/src/components/: UpdateBanner.tsx
apps/desktop/src/components/ai/: AiComposer.tsx  AiDiffPreview.tsx  AiResultPanel.tsx
apps/desktop/src/components/editor/: Editor.css  EditorBubbleMenu.tsx  selectionText.ts
apps/desktop/src/components/journal/: EditableNote.tsx
apps/desktop/src/components/layout/: AppLayout.tsx  useWidgetEditComposer.ts
apps/desktop/src/components/onboarding/: OnboardingModal.tsx
apps/desktop/src/components/settings/: SettingsModal.tsx  SpokenLanguagesField.tsx
apps/desktop/src/hooks/: useMountEffect.ts  useNativeContextMenu.ts  useTimezoneCity.ts
apps/desktop/src/lib/: markdown.ts
apps/desktop/src/services/: ai.ts  assistant.ts  chats.ts  generate.ts  google-imports.ts  google-open.ts  google.ts  images.ts  library.ts  meeting-summary.ts  mentions.ts  obsidian.ts  paths.ts  permissions.ts  settings.ts  storage.ts  tasks.ts  updater.ts  url-summary.ts  widget-attrs.ts  widget-files.ts  widget-storage.ts
apps/desktop/src/types/: note.ts
apps/desktop/src/utils/: language.ts
apps/landing/: astro.config.mjs  package.json
apps/landing/content-engine/: README.md
apps/landing/content-engine/inputs/: engine-config.json
apps/landing/content-engine/state/: audit-queue.json  draft-report.json  facts.json  opportunities.json  refresh-report.json
apps/landing/src/: env.d.ts
apps/landing/src/components/: ReadOnlyHeroNote.css  ReadOnlyHeroNote.tsx
apps/landing/src/content/: config.ts
apps/landing/src/content/blog/: a-calmer-daily-planning-loop.mdx  from-recurring-tasks-to-recurring-systems.mdx  the-case-for-disposable-widgets.mdx  why-we-built-a-journal-that-can-execute-ideas.mdx
apps/landing/src/content/comparisons/: philo-vs-a-separate-task-manager.mdx  philo-vs-heavy-project-management-tools.mdx  philo-vs-manual-recurring-checklists.mdx  philo-vs-static-markdown-daily-notes.mdx
apps/landing/src/content/glossary/: daily-note-timeline.mdx  disposable-widgets.mdx  recurring-tags.mdx  task-rollover.mdx  widget-library.mdx
apps/landing/src/content/guides/: daily-note-timeline.mdx  disposable-widgets-in-notes.mdx  latest-philo-release-roundup.mdx  markdown-notes-on-disk.mdx  note-chat-in-philo.mdx  note-search-in-philo.mdx  recurring-task-tags.mdx  (+2 more)
apps/landing/src/layouts/: CollectionLayout.astro  ContentPageLayout.astro  LegalLayout.astro  SiteLayout.astro
apps/landing/src/lib/: content.ts  site.ts
apps/landing/src/pages/: index.astro  privacy.astro  robots.txt.ts  rss.xml.ts  sitemap.xml.ts  terms.astro
apps/mobile/: App.tsx
apps/mobile/src/components/: EditorWebView.tsx
apps/mobile/src/hooks/: useMountEffect.ts
apps/mobile/src/services/: sync.ts
crates/aec/: Cargo.toml
crates/aec/benches/: aec_bench.rs
crates/aec/src/: lib.rs
crates/am/src/: error.rs
crates/audio/: Cargo.toml
crates/audio-device/: Cargo.toml
crates/audio-utils/: Cargo.toml
crates/audio-utils/src/: lib.rs  vorbis.rs
crates/audio-utils/src/resampler/: dynamic_new.rs  mod.rs  static_new.rs
crates/audio/src/: lib.rs  mic.rs  norm.rs
crates/audio/src/speaker/: linux.rs  macos.rs  mod.rs
crates/cactus/src/: model.rs
crates/cactus/src/llm/: stream.rs
crates/host/src/: lib.rs
crates/owhisper-client/src/: batch.rs  error.rs  live.rs  polling.rs  providers.rs
crates/owhisper-client/src/adapter/: url_builder.rs
crates/soniox/: Cargo.toml
crates/soniox/src/: lib.rs
crates/tcc/swift-lib/src/: lib.swift
crates/tiptap/src/: from_md.rs  lib.rs  to_ast.rs
crates/transcribe-cactus/src/: config.rs
crates/transcribe-cactus/src/service/: batch.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/transcribe-whisper-local/src/service/: recorded.rs  streaming.rs
crates/vad/: Cargo.toml
crates/vad-ext/: Cargo.toml
crates/vad-ext/src/: continuous.rs  lib.rs
crates/vad/src/: lib.rs
crates/ws-utils/src/: lib.rs
docs/: data-storage-and-configuration.md  markdown-sync.md  repo-structure.md  widget-persistence-and-lifecycle.md
plugins/analytics/src/: lib.rs
plugins/fs-db/: Cargo.toml
plugins/fs-db/src/: error.rs  lib.rs  types.rs
plugins/fs-sync/: Cargo.toml
plugins/fs-sync/src/: audio.rs
plugins/hooks/: Cargo.toml
plugins/hooks/js/: bindings.gen.ts
plugins/hooks/src/: commands.rs  config.rs  docs.rs  error.rs  ext.rs  lib.rs  naming.rs  runner.rs
plugins/listener/: Cargo.toml
plugins/listener/src/: error.rs  events.rs  ext.rs  lib.rs
plugins/listener/src/actors/: mod.rs  recorder.rs
plugins/local-stt/src/: ext.rs  model.rs  types.rs
plugins/local-stt/src/server/: external.rs  internal.rs  internal2.rs
plugins/misc/: Cargo.toml
plugins/misc/src/: commands.rs  ext.rs  lib.rs
plugins/permissions/src/: error.rs  ext.rs
plugins/settings/src/: error.rs  lib.rs  obsidian.rs  state.rs
plugins/sidecar2/src/: ext.rs
plugins/tray/src/: ext.rs
plugins/tray/src/menu_items/: tray_quit.rs  tray_start.rs
plugins/windows/src/tab/: mod.rs
scripts/: release-check.mjs
scripts/content-engine/: draft.mjs  lib.mjs  refresh.mjs  sync.mjs
scripts/content-engine/tests/: content-engine.test.mjs
scripts/content-engine/tests/__snapshots__/: release.mdx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/layout/: AppLayout.tsx
src/services/: library.ts
(+58 files in other folders)
