[package]
name = "philo"
version = "0.0.46"
description = "A Tauri App"
authors = ["John Jeong"]
license = "GPL-3.0-or-later"
edition = "2021"
default-run = "philo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "philo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
regex = "1"
similar = "2"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
git2 = { version = "0.20.2", default-features = false, features = ["vendored-libgit2"] }
sha2 = "0.10.9"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
